@@ -2,9 +2,10 @@
 - Fixed macros (%u, %s, %h, %n) not doing multiple replacements
 - Add in key shortcut for username macro (ALT-u)
 - Add in key shortcut for local hostname macro (ALT-l)
-- Fixed a bug with 'show history' key shortcut
-- Fixed "uninitialised errors in hash element" bug [clusterssh support-requests:#38]
+- Fix a bug with 'show history' key shortcut
+- Fix "uninitialised errors in hash element" bug [clusterssh support-requests:#38]
 - Fixed the default cluster not being opened
+- Add in toggle for macros
 
 2013-04-16 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.02_01
 - Refactured file loading code
